# PPO_navigation

./: main.py  pyproject.toml  task_model.py
backend/: database.py  main.py  models.py  schemas.py
backend/langraph_agents/: graph.py  router.py  state.py  tools.py
backend/routes/: chat.py
envs/: __init__.py  goal.py  moving_obstacle.py  navigation_env.py  static_obstacle.py  world.py
inbox_agent/: .gitignore  app.py  memory_management.txt  pyproject.toml  state.py  todo.txt  workflow.txt
inbox_agent/agents/: classifier.py  email_understanding.py  executor.py  llm.py  memory_extractor.py  planner.py  priority.py
inbox_agent/audit/: __init__.py  logger.py  models.py
inbox_agent/guardrails/: __init__.py  audit_guard.py  base.py  confidence_guard.py  config.py  exceptions.py  input_guard.py  output_guard.py  pii_guard.py  planner_guard.py  prompt_injection_guard.py  result.py  tool_argument_guard.py  tool_permission_guard.py
inbox_agent/memory/: __init__.py  enums.py  extractor.py  long_term.py  manager.py  memory_guard.py  models.py  nodes.py  short_term.py  storage.py
inbox_agent/tools/: gmail.py
