[project]
name = "inbox-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
]
